--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
                     <button class="profile__button-edit"></button>
                 </div>
-                <p class="profile__description">Исследователь океана</p>
+                <p class="profile__job">Исследователь океана</p>
             </div>
         </div>
         <button class="profile__button-add"></button>
