--- a/index.html
+++ b/index.html
@@ -33,6 +33,63 @@
         <button class="profile__button-add"></button>
     </section>
 
+    <section class="elements">
+        <article class="element">
+            <div class="element__photo-container">
+                <img src="./images/__element-karacha.jpg" alt="Карачаевск" class="element__photo">
+            </div>
+            <div class="element__info">
+                <h2 class="element__info-name">Карачаевск</h2>
+                <img src="./images/__button-like.svg" alt="Кнопка like" class="__button-like">
+            </div>
+        </article>
+        <article class="element">
+            <div class="element__photo-container">
+                <img src="./images/__element-elbrus.jpg" alt="Эльбрус" class="element__photo">
+            </div>
+            <div class="element__info">
+                <h2 class="element__info-name">Гора Эльбрус</h2>
+                <img src="./images/__button-like.svg" alt="Кнопка like" class="__button-like">
+            </div>
+        </article>
+        <article class="element">
+            <div class="element__photo-container">
+                <img src="./images/__element-dombai.jpg" alt="Домбай" class="element__photo">
+            </div>
+            <div class="element__info">
+                <h2 class="element__info-name">Домбай</h2>
+                <img src="./images/__button-like.svg" alt="Кнопка like" class="__button-like">
+            </div>
+        </article>
+        <article class="element">
+            <div class="element__photo-container">
+                <img src="./images/__element-kaliningrad.jpg" alt="Калининград" class="element__photo">
+            </div>
+            <div class="element__info">
+                <h2 class="element__info-name">Калининград</h2>
+                <img src="./images/__button-like.svg" alt="Кнопка like" class="__button-like">
+            </div>
+        </article>
+        <article class="element">
+            <div class="element__photo-container">
+                <img src="./images/__element-sheregesh.jpg" alt="Горы Шерегеш" class="element__photo">
+            </div>
+            <div class="element__info">
+                <h2 class="element__info-name">Шерегеш, Новокузнецк</h2>
+                <img src="./images/__button-like.svg" alt="Кнопка like" class="__button-like">
+            </div>
+        </article>
+        <article class="element">
+            <div class="element__photo-container">
+                <img src="./images/__element-altay.jpg" alt="Алтайский край" class="element__photo">
+            </div>
+            <div class="element__info">
+                <h2 class="element__info-name">Алтай</h2>
+                <img src="./images/__button-like.svg" alt="Кнопка like" class="__button-like">
+            </div>
+        </article>
+    </section>
+
     <footer class="footer">
         <img class="footer__logo" src="./images/__logo-footer.svg" alt="Дополнительное лого Mesto">
     </footer>
