feat: add popup block

--- a/index.html
+++ b/index.html
@@ -94,6 +94,16 @@
         <img class="footer__logo" src="./images/__logo-footer.svg" alt="Дополнительное лого Mesto">
     </footer>
 
+    <div class="popup">
+        <form action="" class="popup__container">
+            <h2 class="popup__title">Редактировать профиль</h2>
+            <input id="name" name="name" type="text" class="popup__name" placeholder="Имя" required>
+            <input id="job" name="job" type="text" class="popup__job" placeholder="О себе" required>
+            <input type="submit" value="Сохранить" class="popup__submit">
+            <button class="popup__button-close"></button>
+        </form>
+    </div>
+
     <script src="./scripts/script.js"></script>
 </body>
 
