--- a/index.html
+++ b/index.html
@@ -94,17 +94,17 @@
         <img class="footer__logo" src="./images/__logo-footer.svg" alt="Дополнительное лого Mesto">
     </footer>
 
-    <div class="popup">
+    <section class="popup">
         <form action="" class="popup__container">
             <h2 class="popup__title">Редактировать профиль</h2>
-            <input id="name" name="name" type="text" class="popup__name" placeholder="Имя" required>
-            <input id="job" name="job" type="text" class="popup__job" placeholder="О себе" required>
+            <input id="name" name="name" type="text" class="popup__name" placeholder="Имя">
+            <input id="job" name="job" type="text" class="popup__job" placeholder="О себе">
             <input type="submit" value="Сохранить" class="popup__submit">
             <button class="popup__button-close"></button>
         </form>
-    </div>
+    </section>
 
-    <script src="./scripts/script.js"></script>
+    <script src="./scripts/index.js"></script>
 </body>
 
 </html>
