--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="page">
 
     <header class="header">
-        <a href="#" class="header__link">
+        <a href="https://chakrygin-maxim.github.io/mesto/" class="header__link">
             <img src="./images/__logo-header.svg" alt="Основное лого Mesto" class="header__logo">
         </a>
     </header>
@@ -25,85 +25,70 @@
             <div class="profile__info">
                 <div class="profile__name-container">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
-                    <button class="profile__button-edit"></button>
+                    <button class="profile__button-edit" type="button"></button>
                 </div>
                 <p class="profile__job">Исследователь океана</p>
             </div>
         </div>
-        <button class="profile__button-add"></button>
+        <button class="profile__button-add" type="button"></button>
     </section>
 
-    <main class="main">
-        <section class="elements">
-            <article class="element">
-                <div class="element__photo-container">
-                    <img src="./images/__element-karacha.jpg" alt="Карачаевск" class="element__photo">
-                </div>
-                <div class="element__info">
-                    <h2 class="element__info-name">Карачаевск</h2>
-                    <img src="./images/__button-like.svg" alt="Кнопка like" class="__button-like">
-                </div>
-            </article>
-            <article class="element">
-                <div class="element__photo-container">
-                    <img src="./images/__element-elbrus.jpg" alt="Эльбрус" class="element__photo">
-                </div>
-                <div class="element__info">
-                    <h2 class="element__info-name">Гора Эльбрус</h2>
-                    <img src="./images/__button-like.svg" alt="Кнопка like" class="__button-like">
-                </div>
-            </article>
-            <article class="element">
-                <div class="element__photo-container">
-                    <img src="./images/__element-dombai.jpg" alt="Домбай" class="element__photo">
-                </div>
-                <div class="element__info">
-                    <h2 class="element__info-name">Домбай</h2>
-                    <img src="./images/__button-like.svg" alt="Кнопка like" class="__button-like">
-                </div>
-            </article>
-            <article class="element">
-                <div class="element__photo-container">
-                    <img src="./images/__element-kaliningrad.jpg" alt="Калининград" class="element__photo">
-                </div>
-                <div class="element__info">
-                    <h2 class="element__info-name">Калининград</h2>
-                    <img src="./images/__button-like.svg" alt="Кнопка like" class="__button-like">
-                </div>
-            </article>
-            <article class="element">
-                <div class="element__photo-container">
-                    <img src="./images/__element-sheregesh.jpg" alt="Горы Шерегеш" class="element__photo">
-                </div>
-                <div class="element__info">
-                    <h2 class="element__info-name">Шерегеш, Новокузнецк</h2>
-                    <img src="./images/__button-like.svg" alt="Кнопка like" class="__button-like">
-                </div>
-            </article>
-            <article class="element">
-                <div class="element__photo-container">
-                    <img src="./images/__element-altay.jpg" alt="Алтайский край" class="element__photo">
-                </div>
-                <div class="element__info">
-                    <h2 class="element__info-name">Алтай</h2>
-                    <img src="./images/__button-like.svg" alt="Кнопка like" class="__button-like">
-                </div>
-            </article>
-        </section>
+    <main class="elements">
+        <article class="element">
+            <img src="./images/__element-karacha.jpg" alt="Карачаевск" class="element__photo">
+            <div class="element__info">
+                <h2 class="element__info-name">Карачаевск</h2>
+                <button class="element__button-like" type="button"></button>
+            </div>
+        </article>
+        <article class="element">
+            <img src="./images/__element-elbrus.jpg" alt="Эльбрус" class="element__photo">
+            <div class="element__info">
+                <h2 class="element__info-name">Гора Эльбрус</h2>
+                <button class="element__button-like" type="button"></button>
+            </div>
+        </article>
+        <article class="element">
+            <img src="./images/__element-dombai.jpg" alt="Домбай" class="element__photo">
+            <div class="element__info">
+                <h2 class="element__info-name">Домбай</h2>
+                <button class="element__button-like" type="button"></button>
+            </div>
+        </article>
+        <article class="element">
+            <img src="./images/__element-kaliningrad.jpg" alt="Калининград" class="element__photo">
+            <div class="element__info">
+                <h2 class="element__info-name">Калининград</h2>
+                <button class="element__button-like" type="button"></button>
+            </div>
+        </article>
+        <article class="element">
+            <img src="./images/__element-sheregesh.jpg" alt="Горы Шерегеш" class="element__photo">
+            <div class="element__info">
+                <h2 class="element__info-name">Шерегеш, Новокузнецк</h2>
+                <button class="element__button-like" type="button"></button>
+            </div>
+        </article>
+        <article class="element">
+            <img src="./images/__element-altay.jpg" alt="Алтайский край" class="element__photo">
+            <div class="element__info">
+                <h2 class="element__info-name">Алтай</h2>
+                <button class="element__button-like" type="button"></button>
+            </div>
+        </article>
     </main>
 
-
     <footer class="footer">
-        <img class="footer__logo" src="./images/__logo-footer.svg" alt="Дополнительное лого Mesto">
+        <p class="footer__text">&copy; 2020 Mesto Russia</p>
     </footer>
 
     <section class="popup">
-        <form action="" class="popup__container">
+        <form class="popup__container" action="popup-submit" name="popup-editForm">
             <h2 class="popup__title">Редактировать профиль</h2>
-            <input id="name" name="name" type="text" class="popup__name" placeholder="Имя">
-            <input id="job" name="job" type="text" class="popup__job" placeholder="О себе">
-            <input type="submit" value="Сохранить" class="popup__submit">
-            <button class="popup__button-close"></button>
+            <input id="name" name="name" type="text" class="popup__input popup__input_field_name" placeholder="Имя">
+            <input id="job" name="job" type="text" class="popup__input popup__input_field_job" placeholder="О себе">
+            <button type="submit" value="Сохранить" class="popup__submit">Сохранить</button>
+            <button class="popup__button-close" type="button"></button>
         </form>
     </section>
 
