--- a/index.html
+++ b/index.html
@@ -34,48 +34,6 @@
     </section>
 
     <main class="elements">
-        <article class="element">
-            <img src="./images/__element-karacha.jpg" alt="Карачаевск" class="element__photo">
-            <div class="element__info">
-                <h2 class="element__info-name">Карачаевск</h2>
-                <button class="element__button-like" type="button"></button>
-            </div>
-        </article>
-        <article class="element">
-            <img src="./images/__element-elbrus.jpg" alt="Эльбрус" class="element__photo">
-            <div class="element__info">
-                <h2 class="element__info-name">Гора Эльбрус</h2>
-                <button class="element__button-like" type="button"></button>
-            </div>
-        </article>
-        <article class="element">
-            <img src="./images/__element-dombai.jpg" alt="Домбай" class="element__photo">
-            <div class="element__info">
-                <h2 class="element__info-name">Домбай</h2>
-                <button class="element__button-like" type="button"></button>
-            </div>
-        </article>
-        <article class="element">
-            <img src="./images/__element-kaliningrad.jpg" alt="Калининград" class="element__photo">
-            <div class="element__info">
-                <h2 class="element__info-name">Калининград</h2>
-                <button class="element__button-like" type="button"></button>
-            </div>
-        </article>
-        <article class="element">
-            <img src="./images/__element-sheregesh.jpg" alt="Горы Шерегеш" class="element__photo">
-            <div class="element__info">
-                <h2 class="element__info-name">Шерегеш, Новокузнецк</h2>
-                <button class="element__button-like" type="button"></button>
-            </div>
-        </article>
-        <article class="element">
-            <img src="./images/__element-altay.jpg" alt="Алтайский край" class="element__photo">
-            <div class="element__info">
-                <h2 class="element__info-name">Алтай</h2>
-                <button class="element__button-like" type="button"></button>
-            </div>
-        </article>
     </main>
 
     <footer class="footer">
@@ -91,6 +49,16 @@
             <button class="popup__button-close" type="button"></button>
         </form>
     </section>
+
+    <template id="element-template">
+        <article class="element">
+            <img class="element__photo">
+            <div class="element__info">
+                <h2 class="element__info-name"></h2>
+                <button class="element__button-like" type="button"></button>
+            </div>
+        </article>
+    </template>
 
     <script src="./scripts/index.js"></script>
 </body>
