feat: add trash button & del cards

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <template id="element-template">
         <article class="element">
             <img class="element__photo">
+            <button class="element__button-trash"></button>
             <div class="element__info">
                 <h2 class="element__info-name"></h2>
                 <button class="element__button-like" type="button"></button>
