feat: add image popup

--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
         </form>
     </section>
 
+    <section class="popup popup_form_photo">
+        <figure class="popup__image-container">
+            <img src="" alt="" class="popup__image">
+            <figcaption class="popup__caption"></figcaption>
+            <button class="popup__button-close" type="button"></button>
+        </figure>
+    </section>
+
     <template id="element-template">
         <article class="element">
             <img class="element__photo">
