--- a/index.html
+++ b/index.html
@@ -41,21 +41,29 @@
     </footer>
 
     <section class="popup popup_form_profile">
-        <form class="popup__container" action="popup-profile-submit" name="popup-profile-submit">
+        <form class="popup__form" action="popup-profile-submit" name="popup-profile-submit" novalidate>
             <h2 class="popup__title">Редактировать профиль</h2>
-            <input id="name" name="name" type="text" class="popup__input popup__input_field_name" placeholder="Имя">
-            <input id="job" name="job" type="text" class="popup__input popup__input_field_job" placeholder="О себе">
-            <button type="submit" value="Сохранить" class="popup__submit">Сохранить</button>
+            <input name="name" type="text" class="popup__input popup__input_field_name" id="name-input"
+                placeholder="Имя" minlength="2" maxlength="40" type="text" required>
+            <span class="popup__input_type_error" id="name-input-error"></span>
+            <input name="job" type="text" class="popup__input popup__input_field_job" id="job-input"
+                placeholder="О себе" minlength="2" maxlength="200" type="text" required>
+            <span class="popup__input_type_error" id="job-input-error"></span>
+            <button type="submit" value="Сохранить" class="popup__button">Сохранить</button>
             <button class="popup__button-close" type="button"></button>
         </form>
     </section>
 
     <section class="popup popup_form_mesto">
-        <form class="popup__container" action="popup-mesto-submit" name="popup-mesto-submit">
+        <form class="popup__form" action="popup-mesto-submit" name="popup-mesto-submit" novalidate>
             <h2 class="popup__title">Новое место</h2>
-            <input id="cardName" name="cardName" type="text" class="popup__input popup__input_field_cardName" placeholder="Название">
-            <input id="link" name="link" type="text" class="popup__input popup__input_field_link" placeholder="Ссылка на картинку">
-            <button type="submit" value="Создать" class="popup__submit">Создать</button>
+            <input name="cardName" type="text" class="popup__input popup__input_field_cardName" id="cardName-input"
+                placeholder="Название" minlength="2" maxlength="30" type="text" required>
+            <span class="popup__input_type_error" id="cardName-input-error"></span>
+            <input name="link" type="text" class="popup__input popup__input_field_link" id="link-input"
+                placeholder="Ссылка на картинку" type="url" required>
+            <span class="popup__input_type_error" id="link-input-error"></span>
+            <button type="submit" value="Создать" class="popup__button">Создать</button>
             <button class="popup__button-close" type="button"></button>
         </form>
     </section>
@@ -80,6 +88,7 @@
     </template>
 
     <script src="./scripts/index.js"></script>
+    <script src="./scripts/validate.js"></script>
 </body>
 
 </html>
