--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </article>
     </template>
 
-    <script src="./scripts/index.js"></script>
+    <script src="./scripts/index.js" type="module"></script>
     <script src="./scripts/validate.js"></script>
 </body>
 
