refactor: make projet structure

--- a/src/index.html
+++ b/src/index.html
@@ -8,20 +8,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Интересные места, путешествия, природа">
     <title>Mesto - Russia</title>
-    <link rel="stylesheet" href="./pages/index.css">
+    <link rel="stylesheet" href="../src/pages/index.css">
 </head>
 
 <body class="page">
 
     <header class="header">
         <a href="https://chakrygin-maxim.github.io/mesto/" class="header__link">
-            <img src="./images/__logo-header.svg" alt="Основное лого Mesto" class="header__logo">
+            <img src="../src/images/__logo-header.svg" alt="Основное лого Mesto" class="header__logo">
         </a>
     </header>
 
     <section class="profile">
         <div class="profile__main-container">
-            <img src="./images/__image.jpg" alt="Аватар" class="profile__image">
+            <img src="../src/images/__image.jpg" alt="Аватар" class="profile__image">
             <div class="profile__info">
                 <div class="profile__name-container">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -87,7 +87,7 @@
         </article>
     </template>
 
-    <script src="./scripts/index.js" type="module"></script>
+    <script src="../src/pages/index.js" type="module"></script>
 </body>
 
 </html>
