--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
 
     <section class="popup popup_form_photo">
         <figure class="popup__image-container">
-            <img src="" alt="" class="popup__image">
+            <img src="#" alt="" class="popup__image">
             <figcaption class="popup__caption"></figcaption>
             <button class="popup__button-close" type="button"></button>
         </figure>
