--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
     </footer>
 
     <section class="popup popup_form_profile">
-        <form class="popup__form" action="popup-profile-submit" name="popup-profile-submit" novalidate>
+        <form class="popup__form" action="popup-profile-submit" name="formProfile" novalidate>
             <h2 class="popup__title">Редактировать профиль</h2>
             <input name="name" type="text" class="popup__input popup__input_field_name" id="name-input"
                 placeholder="Имя" minlength="2" maxlength="40" required>
@@ -54,7 +54,7 @@
     </section>
 
     <section class="popup popup_form_mesto">
-        <form class="popup__form" action="popup-mesto-submit" name="popup-mesto-submit" novalidate>
+        <form class="popup__form" action="popup-mesto-submit" name="formNewCard" novalidate>
             <h2 class="popup__title">Новое место</h2>
             <input name="cardName" type="text" class="popup__input popup__input_field_cardName" id="cardName-input"
                 placeholder="Название" minlength="2" maxlength="30" required>
