feat: add likes counter

--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,10 @@
             <button class="element__button-trash"></button>
             <div class="element__info">
                 <h2 class="element__info-name"></h2>
-                <button class="element__button-like" type="button"></button>
+                <div class="element__like-container">
+                    <button class="element__button-like" type="button"></button>
+                    <p class="element__likes">1</p>
+                </div>
             </div>
         </article>
     </template>
