--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
                 <h2 class="element__info-name"></h2>
                 <div class="element__like-container">
                     <button class="element__button-like" type="button"></button>
-                    <p class="element__likes">1</p>
+                    <p class="element__likes"></p>
                 </div>
             </div>
         </article>
