feat: добавить возможность удаление своих карточек с подтверждением в попап

--- a/src/index.html
+++ b/src/index.html
@@ -75,6 +75,14 @@
         </figure>
     </section>
 
+    <section class="popup popup_form_confirm">
+        <form class="popup__form" action="popup-profile-confirm" name="formConfirm" novalidate>
+            <h2 class="popup__title">Вы уверены?</h2>
+            <button type="submit" value="Сохранить" class="popup__button">Да</button>
+            <button class="popup__button-close" type="button"></button>
+        </form>
+    </section>
+
     <template id="element-template">
         <article class="element">
             <img class="element__photo">
