--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,9 @@
 
     <section class="profile">
         <div class="profile__main-container">
-            <img src="../src/images/__image.jpg" alt="Аватар" class="profile__image">
+            <div class="profile__image-container">
+                <img src="../src/images/__image.jpg" alt="Аватар" class="profile__image">
+            </div>
             <div class="profile__info">
                 <div class="profile__name-container">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
